# wgpu-vertex-attr-invop-bug

./: Cargo.toml  README.md  build-for-web.sh
src/: main.rs
src/only_pos/: mod.rs  shader.wgsl
src/with_color/: mod.rs  shader.wgsl
static/: index.html  style.css
